--- a/main.html
+++ b/main.html
@@ -7,6 +7,16 @@
 </head>
 
 <body>
+	<H1>Shopping cart</H1>
+	<p>the customer is very important,  the customer will be followed by the customer. Now ,as an urn, i have no right to be in possession of preperty.</p>
+	<div class="product">
+		<img src="https://th.bing.com/th?id=OIP.HxCUDuhXiUIYR73NuIvIvQHaEp&w=315&h=198&c=8&rs=1&qlt=90&o=6&dpr=1.3&pid=3.1&rm=2" class="img-fluid">
+        <h3>I am very sorry</h3>
+		<p>Display:5 inches</p>
+		<p>Ram:4GB</p>
+		<p>Mamory:32GB</p>
+		
+	</div>
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
